# PRODBETA-POLICYCORTEX

./: .env.azure  .env.dev  .env.development  .env.docker  .env.example  .env.local.example  .env.prod  .env.production  .gitignore  .gitleaks.toml  .rustfmt.toml  ACR_AUTHENTICATION_SETUP.md  API_DOCUMENTATION.md  AZURE_AD_SPA_SETUP.md  AZURE_INTEGRATION_SUMMARY.md  AZURE_REAL_DATA_STATUS.md  AZURE_SETUP_NOW.md  BACKEND_INTEGRATION_TEST_REPORT.md  BACKEND_SETUP.md  CHANGELOG.md  CI_CD_DEPLOYMENT_AUDIT.md  CLAUDE.md  CLOUD_ITSM_GUIDE.md  COMPETITOR_DEFENSE.md  COMPLETION_REPORT.md  COMPREHENSIVE_SERVICE_STATUS.md  CONTAINER_APPS_WORKLOAD_PROFILES.md  CONTAINER_STARTUP_TROUBLESHOOTING.md  CORE_API_ISSUE_REPORT.md  CRITICAL_MISSING_COMPONENTS.md  Cargo.toml  CUsersleonaDocumentsAeoliTechpolicycortex.env.example  DEMO_INSTRUCTIONS.html  DEMO_READINESS.md  DEPLOYMENT_GUIDE.md  DEVOPS_GUIDE.md  Dockerfile  Dockerfile.ml  Dockerfile.ml-cpu  Dockerfile.ml-minimal  (+138 more)
.claude/: settings.local.json  settings.production.json
.devcontainer/: devcontainer.json
.github/: SECRETS_SETUP.md  dependabot.yml
.pcx/: agent-baseline.yaml
DECK/: PITCH_DECK.md
Instruct/: Module _success.md
PATH-WAY/: ANALYSIS-FOCUS.MD  EXTREME_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LIVE_DATA_AUDIT.md  Refocused.md  Revamp.md  UI-IMPROVEMENTS.MD  create-these.md  my ui navs.md  uinav.md  uiuxwayforward.md
backend/: .dockerignore  (+8 more)
core/: Cargo.toml  Dockerfile  Dockerfile.demo  mock-server.sh
core/migrations/: 001_create_cqrs_tables.sql  20250814120000_init.sql
core/prediction/: README.md  requirements.txt  start-prevent-services.py
core/prediction/auto-fixer/: generator.py
core/prediction/drift-detector/: Cargo.toml  mod.rs
core/prediction/drift-detector/src/: main.rs
core/prediction/ml-engine/: predictor.py  requirements.txt
core/prediction/policy-simulator/: go.mod
core/roi/: README.md  __init__.py  requirements.txt
core/roi/cost-calculator/: calculator.py
core/roi/cost_calculator/: __init__.py
core/roi/impact-analyzer/: analyzer.py
core/roi/pl-dashboard/: metrics.py
core/roi/pl_dashboard/: __init__.py
core/roi/what-if-engine/: simulator.py
core/roi/what_if_engine/: __init__.py
core/src/: action_orchestrator.rs  approval_workflow.rs  approvals.rs  audit_chain.rs  auth.rs  auth_middleware.rs  azure_client.rs  azure_client_async.rs  azure_integration.rs  cache.rs  change_management.rs  checkpoint.rs  config.rs  data_mode.rs  defender_streaming.rs  enforcement.rs  enhanced_approval_workflow.rs  error.rs  evidence_pipeline.rs  finops.rs  lib.rs  main.rs  main_mock.rs  observability.rs  performance_optimizer.rs  policy_engine.rs  quota_middleware.rs  secret_guard.rs  secrets.rs  simulated_data.rs  slo.rs  tenant.rs  tenant_isolation.rs  validation.rs  websocket.rs
core/src/ai/: mod.rs  model_registry.rs
core/src/api/: ai_nav.rs  blockchain.rs  compliance.rs  conversation.rs  copilot.rs  correlations.rs  dashboard.rs  devops.rs  devsecops.rs  edge.rs  evidence.rs  executive.rs  finops.rs  governance.rs  health.rs  itsm.rs  ml.rs  ml_endpoints.rs  mod.rs  notifications.rs  operations.rs  predictions.rs  quantum.rs  rbac_deep_drill.rs  remediation.rs  resources.rs  security.rs  security_nav.rs
core/src/azure/: activity.rs  auth.rs  client.rs  cost.rs  devops.rs  governance.rs  mod.rs  monitor.rs  operations.rs  resource_graph.rs  security.rs
core/src/azure_integration/: real_data.rs
core/src/cache/: mod.rs
core/src/cloud/: mod.rs  models.rs  traits.rs
core/src/cloud/providers/: aws.rs  azure.rs  factory.rs  gcp.rs  mod.rs
core/src/collectors/: aws_collector.rs  azure_resource_collector.rs  gcp_collector.rs  mod.rs
core/src/compliance/: mod.rs
core/src/correlation/: advanced_correlation_engine.rs  cross_domain_engine.rs  graph_driver.rs  impact_analyzer.rs  mod.rs  predictive_impact_analyzer.rs  resource_mapper.rs  smart_dependency_mapper.rs
core/src/cqrs/: aggregate.rs  commands.rs  events.rs  mod.rs  projections.rs  queries.rs
core/src/db/: mod.rs
core/src/events/: mod.rs
core/src/evidence/: README.md  mod.rs
core/src/evidence/audit_reporter/: mod.rs  package.json  reporter.ts
core/src/evidence/collector/: collector.py  mod.rs  requirements.txt
core/src/evidence/hash_chain/: chain.rs  mod.rs
core/src/finops/: mod.rs
core/src/governance/: access_control.rs  blueprints.rs  cost_management.rs  identity.rs  mod.rs  monitoring.rs  network.rs  network_governance.rs  optimization.rs  policy_engine.rs  resource_graph.rs  security_posture.rs  unified_api.rs
core/src/governance/ai/: conversation.rs  correlation.rs  mod.rs  prediction.rs
core/src/middleware/: mod.rs  usage_tracking.rs
core/src/ml/: anomaly_detection.rs  confidence_scoring.rs  continuous_training.rs  conversation_memory.rs  correlation_engine.rs  cost_prediction.rs  drift_detector.rs  entity_extractor.rs  explainability.rs  graph_neural_network.rs  intent_router.rs  mod.rs  natural_language.rs  pattern_analysis.rs  pattern_library.rs  policy_generator.rs  predictive_compliance.rs  query_understanding.rs  risk_scoring.rs
core/src/policy/: evaluation_engine.rs
core/src/remediation/: approval_manager.rs  arm_executor.rs  bulk_remediation.rs  mod.rs  notification_system.rs  quick_fixes.rs  rollback_manager.rs  status_tracker.rs  template_library.rs  validation_engine.rs  workflow_engine.rs
core/src/resources/: categories.rs  correlations.rs  discovery.rs  manager.rs  mod.rs  tests.rs
core/src/security/: defender_client.rs  mod.rs
core/src/security_graph/: mod.rs
core/src/services/explainability/: mod.rs
core/src/services/knowledge_graph/: mod.rs
core/src/services/metering/: mod.rs
core/src/utils/: mod.rs  retry.rs
core/tests/: basic_integration_test.rs  integration_tests.rs  model_eval.rs
core/tests/integration/: approval_workflow_tests.rs  e2e_comprehensive_tests.rs  mod.rs  notification_integration_tests.rs  performance_tests.rs  remediation_workflow_tests.rs  validation_engine_tests.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
(+1808 files in other folders)
