[package]
name = "policycortex-core"
version = "2.0.0"
edition = "2021"
authors = ["AeoliTech"]
description = "PolicyCortex v2 - AI-Powered Azure Governance Platform"

[dependencies]
# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Azure SDK
azure_identity = "0.20"
azure_core = "0.20"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# JWT Token Validation
jsonwebtoken = "9.3"
serde_urlencoded = "0.7"

# Async traits for authentication
async-trait = "0.1"

# HTTP Headers
headers = "0.3"

# Redis caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager", "json"] }

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Environment Variables
dotenv = "0.15"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Graph algorithms
petgraph = "0.6"

# Cryptography
sha2 = "0.10"

# Regular expressions
regex = "1.0"

# AWS SDK (optional, for multi-cloud)
aws-config = { version = "1.0", optional = true }
aws-sdk-iam = { version = "1.0", optional = true }
aws-sdk-organizations = { version = "1.0", optional = true }
aws-sdk-ec2 = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-cloudtrail = { version = "1.0", optional = true }
aws-sdk-config = { version = "1.0", optional = true }

# NATS for event streaming (optional)
async-nats = { version = "0.33", optional = true }
futures-lite = "2.6.1"

[features]
default = ["events"]
aws = ["aws-config", "aws-sdk-iam", "aws-sdk-organizations", "aws-sdk-ec2", "aws-sdk-s3", "aws-sdk-cloudtrail", "aws-sdk-config"]
events = ["async-nats"]
