[package]
name = "policycortex-core"
version = "2.14.6"
edition = "2021"
authors = ["AeoliTech"]
description = "PolicyCortex - AI-Powered Azure Governance Platform"

[[bin]]
name = "policycortex-core"
path = "src/main.rs"

[lib]
name = "policycortex_core"
path = "src/lib.rs"

# Explicitly declare this crate is not part of the parent workspace
[workspace]

[dependencies]
# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Azure SDK
azure_identity = "0.20"
azure_core = "0.20"
azure_security_keyvault = "0.20"

# HTTP Client (use rustls to avoid OpenSSL completely)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Hyper for HTTP body handling in tests
hyper = "1.0"

# JWT Token Validation
jsonwebtoken = "9.3"
serde_urlencoded = "0.7"

# Async traits for authentication
async-trait = "0.1"

# HTTP Headers
headers = "0.3"

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "json"] }

# Rate limiting
tower_governor = "0.4"
governor = "0.6"

# SQL database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Lazy static for compile-time patterns
lazy_static = "1.4"

# Regular expressions for secret scanning
regex = "1.10"

# URL parsing for validation
url = "2.5"

# Random number generation for jitter
rand = "0.8"

# Base64 encoding for signatures
base64 = "0.21"

# Graph database drivers
neo4rs = "0.7"
gremlin-client = "0.8"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Prometheus metrics
prometheus = "0.13"
tar = "0.4"
flate2 = "1.0"

# Environment Variables
dotenv = "0.15"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# High-performance concurrent data structures for governance
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Graph algorithms
petgraph = "0.6"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
## (removed duplicate regex dependency; defined above at version 1.10)

# AWS SDK (optional, for multi-cloud)
aws-config = { version = "1.0", optional = true }
aws-sdk-iam = { version = "1.0", optional = true }
aws-sdk-organizations = { version = "1.0", optional = true }
aws-sdk-ec2 = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-cloudtrail = { version = "1.0", optional = true }
aws-sdk-config = { version = "1.0", optional = true }

# NATS for event streaming (optional)
async-nats = { version = "0.42", optional = true }
futures-lite = "2.6.1"

# OpenSSL vendored fallback (optional, for CI environments)
openssl = { version = "0.10", features = ["vendored"], optional = true }
futures = "0.3.31"

# Test dependencies
[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
aws = ["aws-config", "aws-sdk-iam", "aws-sdk-organizations", "aws-sdk-ec2", "aws-sdk-s3", "aws-sdk-cloudtrail", "aws-sdk-config"]
events = ["async-nats"]
vendored-openssl = ["openssl"]
