[package]
name = "drift-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
dashmap = "6.1"
futures = "0.3"

# For Azure integration
azure_core = "0.21"
azure_identity = "0.21"

# For metrics and monitoring
prometheus = "0.13"